--- a/panels/dude-stack.html
+++ b/panels/dude-stack.html
@@ -14,6 +14,13 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
     <style>
         :host {
             position: relative;
+            @apply(--layout-vertical);
+            @apply(--layout-flex);
+        }
+        #panel {
+            background: var(--dude-secondary-background-color);
+            @apply(--layout-vertical);
+            @apply(--layout-flex);
         }
         .title {
             font-family: var(--dude-primary-text-font);
@@ -24,7 +31,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             border-bottom: 2px solid var(--dude-primary-background-color);
             margin-bottom: 10px;
         }
-        i {
+        #panel i {
             z-index: 10;
             cursor: pointer;
             position: absolute;
@@ -32,11 +39,33 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             left: 10px;
             color: var(--dude-secondary-text-color);
         }
+        #button {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: var(--dude-secondary-background-color);
+            color: var(--dude-secondary-text-color);
+            cursor: pointer;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+        #button i {
+            position: absolute;
+            margin: 8px 12px;
+            top: 10px;
+            left: 10px;
+        }
     </style>
     <template>
-        <i on-click="popStack" class="fa fa-close"></i>
-        <div class="title">Panel title</div>
-        <div id="stack"></div>
+        <div id="button" hidden$="[[ _panelOpen ]]" on-click="_openPanel">
+            <i class="fa fa-info"></i>
+        </div>
+        <div id="panel" hidden$="[[ !_panelOpen ]]">
+            <i on-click="popStack" class="fa fa-close"></i>
+            <div class="title">Panel title</div>
+            <div id="stack"></div>
+        </div>
     </template>
     <script>
         Polymer({
@@ -59,6 +88,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @private
              */
             _currentElement: null,
+
+            ready: function () {
+                this.set("_panelOpen", false);
+            },
 
             /**
              * Pushes an element on the stack
@@ -95,6 +128,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                         if (typeof this._currentElement.resumed === "function") {
                             this._currentElement.resumed();
                         }
+                    } else {
+                        this.set("_panelOpen", false);
                     }
                     return currentElement;
                 }
@@ -159,6 +194,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              */
             _stackClose: function (e) {
                 this.removeStack(e.target);
+            },
+
+            _openPanel: function () {
+                this.set("_panelOpen", true);
             }
         });
 
