--- a/panels/dude-graph-create.html
+++ b/panels/dude-graph-create.html
@@ -2,6 +2,7 @@
 Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../dude-hierarchy/dude-hierarchy.html">
 <!--
 `dude-graph-create` is a panel used to add a new blocks/variables to the graph.
