--- a/panels/dude-graph-edit-variable.html
+++ b/panels/dude-graph-edit-variable.html
@@ -2,6 +2,7 @@
 Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../paper-button/paper-button.html">
 <link rel="import" href="../../dude-property/dude-property.html">
 <!--
