--- a/panels/dude-stack.html
+++ b/panels/dude-stack.html
@@ -3,6 +3,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <!--suppress HtmlUnknownTarget -->
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
 <!--
 `dude-stack`
 
