--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,28 @@
     <title>dude-graph - Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="import" href="audigame/audigame.html">
+    <style>
+        body {
+            height: 100vh;
+            margin: 0;
+        }
+
+        ::-webkit-scrollbar {
+            width: 5px;
+            height: 5px;
+        }
+        ::-webkit-scrollbar-track {
+            background: rgba(0, 0, 0, .1);
+        }
+        ::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 0.7);
+        }
+        ::-webkit-scrollbar-thumb:window-inactive {
+            background: rgba(255, 255, 255, 0.4);
+        }
+    </style>
 </head>
-<body style="height: 100vh; margin: 0">
-<demo-audigame style="height: 100%"></demo-audigame>
+<body>
+    <demo-audigame></demo-audigame>
 </body>
 </html>
