--- a/panels/dude-stack.html
+++ b/panels/dude-stack.html
@@ -23,6 +23,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             @apply(--layout-vertical);
             @apply(--layout-flex);
         }
+        #stack {
+            overflow: auto;
+        }
         .title {
             font-family: var(--dude-primary-text-font);
             text-align: center;
